# quant

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: development_log.md
src/quant_factor/: __init__.py  backtest.py  config.py  data_loader.py  evaluation.py  factors.py  metrics.py  pipeline.py
src/quant_factor/data_sources/: __init__.py  akshare_source.py  schema.py  yfinance_source.py
tests/: test_backtest.py  test_data_loader.py  test_data_sources.py  test_evaluation.py  test_factors.py  test_metrics.py  test_pipeline.py
